<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Ezz Game Engine</string>
	<string name="Create">Create</string>
	<string name="New_Project">New Project</string>
	<string name="Project_Name">Project Name</string>
	<string name="my_game">My Game</string>
	<string name="package_name">Package Name</string>
	<string name="simple_package_name">com.ezz.myGame</string>
	<string name="base_universe">Base Universe</string>
	<string name="simple_universe">BaseUniverse</string>
	<string name="blank_field">This field cannot be left blank!</string>
	<string name="project_already_exits">This project already exits!</string>
	<string name="file_already_exits">This file already exits!</string>
	<string name="illegal_project_name">This project name can\'t be used!</string>
	<string name="add_entity">Add Entity</string>
	<string name="add_component">Add Component</string>
	<string name="entity">Entity</string>
	<string name="transform">Transform</string>
	<string name="position">Position</string>
    <string name="size">Size</string>
    <string name="rotation">Rotation</string>
	<string name="body">Body</string>
	<string name="body_type">Body Type</string>
	<string name="sVelocity">Start Velocity</string>
	<string name="gravity_multipler">Gravity Multiplier</string>
	<string name="button">Button</string>
	<string name="font">Font</string>
	<string name="proggressbar">Progress Bar</string>
	<string name="proggress">Progress</string>
	<string name="_switch">Switch</string>
	<string name="files">Files</string>
	<string name="output">Output</string>
	<string name="remove_project">Remove Project</string>
	<string name="publish_project">Publish Project</string>
	<string name="sgbsu">Stop game before save universe</string>
    <string name="subrg">Save universe before run game</string>
	<string name="just_a_moment">Just a Moment</string>
	<string name="switch_is_checked">Is Checked</string>
    <string name="font_edittext">Text</string>
	<string name="add_file">Add File</string>
	<string name="add">Add</string>
	<string name="file_name">File Name</string>
    <string name="background_color">Background Color</string>
    <string name="selected_background_color">Selected Background Color</string>
	<string name="proggress_color">Progress Color</string>
    <string name="handle_color">Handle Color</string>
    <string name="color">Color</string>
    <string name="touch_color">Touch Color</string>
	<string name="store">Store</string>
	<string name="settings">Settings</string>
	<string name="gravity">Gravity</string>
	<string name="language">Language</string>
	<string name="restart_app_for_change_language">Restart App for Change Language</string>
	<string name="camera">Camera</string>
	<string name="follow_entity">Follow Entity</string>
	<string name="none_of_them">None of Them</string>
	<string name="remove">Remove</string>
	<string name="copy">Copy</string>
	<string name="versioni">Version: </string>
	
	<string name="speed">Speed</string>
	<string name="add_frame">Add Frame</string>
	<string name="path">Path</string>
	<string name="play_on_start">Play On Start</string>
	<string name="is_looping">Loop</string>
</resources>
