<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:text="Switch"
		android:textStyle="bold"/>

	<View
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:background="#000000"
		android:layout_marginBottom="9dp"/>

	<Switch
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:id="@+id/switchIsChecked"
		android:text="@string/switch_is_checked"/>
	
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/background_color"
        android:textStyle="bold"
		android:id="@+id/string_switchBColor"/>

    <View
        android:layout_height="25dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:background="#fff"
        android:layout_marginBottom="5dp"
        android:id="@+id/switchBackgroundColor"/>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/selected_background_color"
        android:textStyle="bold"
		android:id="@+id/string_switchSBColor"/>

    <View
        android:layout_height="25dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:background="#fff"
        android:layout_marginBottom="5dp"
        android:id="@+id/switchSelectedBackgroundColor"/>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/handle_color"
        android:textStyle="bold"
		android:id="@+id/string_switchHandleColor"/>

    <View
        android:layout_height="25dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:background="#fff"
        android:layout_marginBottom="5dp"
        android:id="@+id/switchHandleColor"/>

</LinearLayout>

